--- a/references.bib
+++ b/references.bib
@@ -671,4 +671,52 @@
   pages     = {vii+257},
 }
 
+@Article{Li2023,
+  author     = {Li, Conghui},
+  journal    = {Comm. Algebra},
+  title      = {Restrictions of irreducible characters of finite groups of {L}ie type to derived subgroups and regular semisimple elements},
+  year       = {2023},
+  issn       = {0092-7872,1532-4125},
+  number     = {3},
+  pages      = {983--990},
+  volume     = {51},
+  doi        = {10.1080/00927872.2022.2118759},
+  fjournal   = {Communications in Algebra},
+  mrclass    = {20C33 (20C15)},
+  mrnumber   = {4554553},
+  mrreviewer = {Farrokh\ Shirjian},
+  url        = {https://doi.org/10.1080/00927872.2022.2118759},
+}
+
+@Article{Li2019,
+  author     = {Li, Conghui},
+  journal    = {J. Algebra},
+  title      = {An equivariant bijection between irreducible {B}rauer characters and weights for {${\rm Sp}(2n,q)$}},
+  year       = {2019},
+  issn       = {0021-8693,1090-266X},
+  pages      = {84--117},
+  volume     = {539},
+  doi        = {10.1016/j.jalgebra.2019.07.031},
+  fjournal   = {Journal of Algebra},
+  mrclass    = {20C20 (20C33)},
+  mrnumber   = {3995237},
+  mrreviewer = {A.\ S.\ Kondrat\cprime ev},
+  url        = {https://doi.org/10.1016/j.jalgebra.2019.07.031},
+}
+
+@Article{SchaefferFryTaylorVinroot2025,
+  author   = {Schaeffer Fry, A. A. and Taylor, Jay and Vinroot, C. Ryan},
+  journal  = {J. Algebra},
+  title    = {Galois automorphisms and a unique {J}ordan decomposition in the case of connected centralizer},
+  year     = {2025},
+  issn     = {0021-8693,1090-266X},
+  pages    = {123--149},
+  volume   = {664},
+  doi      = {10.1016/j.jalgebra.2024.10.017},
+  fjournal = {Journal of Algebra},
+  mrclass  = {20C33},
+  mrnumber = {4821696},
+  url      = {https://doi.org/10.1016/j.jalgebra.2024.10.017},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
